force-app/main/default/objects/Construction_Project__c/Construction_Project__c.object-meta.xml
<CustomObject>
    <label>Construction Project</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Construction Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Construction Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>