force-app/main/default/objects/Construction_Project__c/fields/Change_Order_Approver__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Approver__c</fullName>
    <label>Change Order Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Regional Sales Mgr.</fullName>
            </value>
            <value>
                <fullName>Project Mgr.</fullName>
            </value>
            <value>
                <fullName>Post-Delivery Mgr.</fullName>
            </value>
            <value>
                <fullName>Finance Ops Mgr.</fullName>
            </value>
            <value>
                <fullName>Order Mgmt Mgr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>