force-app/main/default/objects/Construction_Project__c/fields/Contract_Executed_on__c.field-meta.xml
<CustomField>
    <fullName>Contract_Executed_on__c</fullName>
    <label>Contract Executed on</label>
    <type>Date</type>
</CustomField>