force-app/main/default/objects/Construction_Project__c/fields/Contractor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Phone__c</fullName>
    <label>Contractor Phone</label>
    <type>Phone</type>
</CustomField>