force-app/main/default/objects/Construction_Project__c/fields/Electric_Connected__c.field-meta.xml
<CustomField>
    <fullName>Electric_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electric Connected?</label>
    <type>Checkbox</type>
</CustomField>