force-app/main/default/objects/Construction_Project__c/fields/Electric_Hookup_Date__c.field-meta.xml
<CustomField>
    <fullName>Electric_Hookup_Date__c</fullName>
    <label>Electric Hookup Date</label>
    <type>Date</type>
</CustomField>