force-app/main/default/objects/Construction_Project__c/fields/Estimated_1st_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_1st_Delivery_Date__c</fullName>
    <formula>Contract__r.Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This drives</inlineHelpText>
    <label>Estimated 1st Delivery Date</label>
    <type>Date</type>
</CustomField>