force-app/main/default/objects/Construction_Project__c/fields/Gas_Connected__c.field-meta.xml
<CustomField>
    <fullName>Gas_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gas Connected?</label>
    <type>Checkbox</type>
</CustomField>