force-app/main/default/objects/Construction_Project__c/fields/Gas_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Gas_Install_Date__c</fullName>
    <label>Gas Install Date</label>
    <type>Date</type>
</CustomField>