force-app/main/default/objects/Construction_Project__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <formula>IF(NOt(ISBLANK( Owner:Queue.QueueName)) , Owner:Queue.QueueName,  Owner:User.FirstName &amp;&quot; &quot;&amp;Owner:User.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>