force-app/main/default/objects/Construction_Project__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Contract__r.ShippingStreet &amp; BR()&amp;
Contract__r.ShippingCity &amp;&quot;,&quot;&amp; Contract__r.ShippingState &amp; BR()&amp;
Contract__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>