force-app/main/default/objects/Construction_Project__c/fields/Water_Connected__c.field-meta.xml
<CustomField>
    <fullName>Water_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Connected?</label>
    <type>Checkbox</type>
</CustomField>