force-app/main/default/objects/Construction_Project__c/fields/Water_Hookup_Date__c.field-meta.xml
<CustomField>
    <fullName>Water_Hookup_Date__c</fullName>
    <label>Water Hookup Date</label>
    <type>Date</type>
</CustomField>