force-app/main/default/objects/Construction_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Owner__c</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>