force-app/main/default/objects/Construction_Project__c/listViews/Deliveries_in_Progress.listView-meta.xml
<ListView>
    <fullName>Deliveries_in_Progress</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Owner__c</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Deliveries in Progress</value>
    </filters>
    <label>Deliveries in Progress</label>
    <language>en_US</language>
</ListView>