force-app/main/default/objects/Construction_Project__c/listViews/My_New_Projects.listView-meta.xml
<ListView>
    <fullName>My_New_Projects</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Owner__c</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>My New Projects</label>
    <language>en_US</language>
</ListView>