force-app/main/default/objects/Construction_Project__c/listViews/My_Open_Projects_by_Status.listView-meta.xml
<ListView>
    <fullName>My_Open_Projects_by_Status</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Owner__c</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Open Projects by Status</label>
    <language>en_US</language>
</ListView>