force-app/main/default/objects/Construction_Project__c/listViews/Scheduled_Deliveries.listView-meta.xml
<ListView>
    <fullName>Scheduled_Deliveries</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Owner__c</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Deliveries Scheduled</value>
    </filters>
    <label>Scheduled Deliveries</label>
    <language>en_US</language>
</ListView>